try out the behavior with no protected modules

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,3 +12,5 @@ jobs:
         uses: actions/checkout@v4
       - name: check
         uses: metlos/toolchain-cicd/gomod-check@improve-gomod-check
+        with:
+          protected-modules: ""
